2009-01-16  Jürg Billeter  <j@bitron.ch>

	* vala/valaexpression.vala:
	* vala/valareturnstatement.vala:

	Report error when returning owned variable in method or property
	with unowned return value, fixes bug 547102

2009-01-16  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gconf-2.0/:

	Remove gconf_init binding, it is broken and deprecated,
	fixes bug 548435

	* vapi/gconf-2.0.vapi: regenerated

2009-01-16  Jürg Billeter  <j@bitron.ch>

	* vala/valacodewriter.vala:
	* vapigen/valagidlparser.vala:

	Support vfunc_name attribute

	* vapi/packages/gio-2.0/:

	Fix g_seekable_truncate binding, fixes bug 564448

	* vapi/gio-2.0.vapi: regenerated

2009-01-16  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix GtkTreePath binding, fixes bug 566274

	* vapi/gtk+-2.0.vapi: regenerated

2009-01-16  Jürg Billeter  <j@bitron.ch>

	* vala/valabaseaccess.vala:
	* vala/valacodewriter.vala:
	* vala/valagenieparser.vala:
	* vala/valaparser.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valastruct.vala:
	* vala/valasymbolresolver.vala:
	* vapigen/valagirparser.vala:

	Do not allow structs to have more than one base type and detect
	cycles, patch by Andreas Brauchli, fixes bug 556063 and bug 567661

2009-01-16  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix gtk_text_iter_forward_find_char binding,
	patch by Nicolas Joseph, fixes bug 567543

	* vapi/gtk+-2.0.vapi: regenerated

2009-01-16  Jürg Billeter  <j@bitron.ch>

	* vala/valablock.vala:

	Detect local variables conflicting with parameters,
	patch by Andreas Brauchli, fixes bug 523189

	* vala/valaflowanalyzer.vala:
	* vala/valaparser.vala:

	Fix conflicts

2009-01-16  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am:
	* vapi/mysql.vapi:

	Add MySQL bindings, patch by Jukka-Pekka Iivonen, fixes bug 567342

2009-01-16  Jürg Billeter  <j@bitron.ch>

	* vala/valastruct.vala:

	Fix struct base type error message, patch by Carlos Cadete,
	fixes bug 567366

2009-01-16  Jürg Billeter  <j@bitron.ch>
